--- a/project/project.json5
+++ b/project/project.json5
@@ -17,8 +17,25 @@
                     {
                         subsector: {
                             base: [
-                                'bev_compact', 'bev_midsize', 'bev_pickup', 'bev_suv', 
-                                'phev_compact', 'phev_midsize', 'phev_pickup', 'phev_suv',
+                                'Personal_LDV+Compact+BEV_200', 'Personal_LDV+Compact+BEV_300',
+                                'Personal_LDV+Compact+BEV_400',
+                                'Personal_LDV+Compact+PHEV_25',
+                                'Personal_LDV+Compact+PHEV_50',
+                                'Personal_LDV+Midsize+BEV_200',
+                                'Personal_LDV+Midsize+BEV_300',
+                                'Personal_LDV+Midsize+BEV_400',
+                                'Personal_LDV+Midsize+PHEV_25',
+                                'Personal_LDV+Midsize+PHEV_50',
+                                'Personal_LDV+Pickup+BEV_200',
+                                'Personal_LDV+Pickup+BEV_300',
+                                'Personal_LDV+Pickup+BEV_400',
+                                'Personal_LDV+Pickup+PHEV_25',
+                                'Personal_LDV+Pickup+PHEV_50',
+                                'Personal_LDV+SUV+BEV_200',
+                                'Personal_LDV+SUV+BEV_300',
+                                'Personal_LDV+SUV+BEV_400',
+                                'Personal_LDV+SUV+PHEV_25',
+                                'Personal_LDV+SUV+PHEV_50',
                             ],
                         },
                         metric: {
@@ -36,9 +53,37 @@
                     {
                         subsector: {
                             base: [
-                                'bev_light_medium_truck', 'bev_medium_truck', 
-                                'bev_non_freight_truck', 'bev_heavy_truck', 
-                                'bev_bus',
+                                'Truck_Heavy+Local+BEV_150',
+                                'Truck_Heavy+Local+BEV_300',
+                                'Truck_Heavy+Long-haul+BEV_300',
+                                'Truck_Heavy+Long-haul+BEV_500',
+                                'Truck_Heavy+Regional+BEV_150',
+                                'Truck_Heavy+Regional+BEV_300',
+                                'Truck_Heavy_Vocational+Local+BEV_150',
+                                'Truck_Heavy_Vocational+Local+BEV_300',
+                                'Truck_Heavy_Vocational+Regional+BEV_150',
+                                'Truck_Heavy_Vocational+Regional+BEV_300',
+                                'Truck_Light+Local+BEV_150',
+                                'Truck_Light+Local+BEV_300',
+                                'Truck_Light+Long-haul+BEV_300',
+                                'Truck_Light+Long-haul+BEV_500',
+                                'Truck_Light+Regional+BEV_150',
+                                'Truck_Light+Regional+BEV_300',
+                                'Truck_Light_Vocational+Local+BEV_150',
+                                'Truck_Light_Vocational+Local+BEV_300',
+                                'Truck_Light_Vocational+Regional+BEV_150',
+                                'Truck_Light_Vocational+Regional+BEV_300',
+                                'Truck_Medium+Local+BEV_150',
+                                'Truck_Medium+Local+BEV_300',
+                                'Truck_Medium+Long-haul+BEV_300',
+                                'Truck_Medium+Long-haul+BEV_500',
+                                'Truck_Medium+Regional+BEV_150',
+                                'Truck_Medium+Regional+BEV_300',
+                                'Truck_Medium_Vocational+Local+BEV_150',
+                                'Truck_Medium_Vocational+Local+BEV_300',
+                                'Truck_Medium_Vocational+Regional+BEV_150',
+                                'Truck_Medium_Vocational+Regional+BEV_300',
+                                'Bus+N/A+BEV_200',
                             ],
                         },
                         metric: {
@@ -54,7 +99,7 @@
                     },
                     {
                         subsector: {
-                            base: ['rail_transit'],
+                            base: ['Transit_Rail'],
                         },
                         metric: {
                             base: ['electricity_rail_transit'],
